add logic createPage

--- a/webapp.client/src/app/dashboard/dashboard.component.html
+++ b/webapp.client/src/app/dashboard/dashboard.component.html
@@ -1,19 +1,16 @@
 <!-- dashboard.component.html -->
 <app-header></app-header>
 
-<div>
-  <!-- Messaggio di errore, visualizzato solo se errorMessage è presente -->
-  <div *ngIf="errorMessage; else pageList" class="error-message">
-    <p>{{ errorMessage }}</p>
-  </div>
-
-  <ng-template #pageList>
-    <ul>
-      <li *ngFor="let page of pages">
-        {{ page.title }}
-      </li>
-    </ul>
-  </ng-template>
+<div *ngIf="errorMessage" class="error-message">
+  {{ errorMessage }}
 </div>
+
+<div *ngIf="!errorMessage">
+  <!-- Visualizza le pagine qui -->
+  <ul>
+    <li *ngFor="let page of pages">{{ page.name }}</li>
+  </ul>
+</div>
+
 
 <app-footer></app-footer>
