--- a/webapp.client/src/app/components/header/header.component.html
+++ b/webapp.client/src/app/components/header/header.component.html
@@ -1,53 +1,45 @@
-<div class="it-header-center-wrapper" id="header">
-    <div class="container-xl">
-      <div class="row">
-        <div class="col-12">
-          <div class="it-header-center-content-wrapper">
-            <div class="it-brand-wrapper">
-              <a href="#">
-                <div class="it-brand-text">
-                  <div class="it-brand-title">Sito</div>
-                </div>
-              </a>
-            </div>
-            <div class="it-right-zone">
-              <div class="it-socials d-none d-md-flex">
-                <span>Seguici su</span>
-                <ul>
-                  <li>
-                    <a href="#" aria-label="Facebook" target="_blank">
-                      <svg class="icon">
-                        <use href="/bootstrap-italia/svg/sprites.svg#it-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Github" target="_blank">
-                      <svg class="icon">
-                        <use href="/bootstrap-italia/svg/sprites.svg#it-github"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" aria-label="Twitter" target="_blank">
-                      <svg class="icon">
-                        <use href="/bootstrap-italia/svg/sprites.svg#it-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="it-search-wrapper">
-                <span class="d-none d-md-block">Login</span>
-                <a class="search-link rounded-icon" routerLink="Login">
-                  <svg class="icon">
-                    <use href="/bootstrap-italia/svg/sprites.svg#it-user"></use>
-                  </svg>
-                </a>
-              </div>
-            </div>
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Sito</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+      aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+            aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Separated link</a>
           </div>
-        </div>
+        </li>
+      </ul>
+
+      <!-- Button group for the user menu -->
+      <div class="btn-group">
+        <button class="btn btn-link p-0 nav-link active" type="button" id="userMenu" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          <i class="bi bi-person-circle fs-2"></i>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+          <li *ngIf="!isLoggedIn">
+            <a class="dropdown-item" (click)="login()">Login</a>
+          </li>
+          <li *ngIf="isLoggedIn">
+            <a class="dropdown-item" (click)="logout()">Logout</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
+</nav>
